--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ a:hover{
 #contentContainer{
     width: 800px;
     height: 100%;
-    margin: 5em auto 2em;
+    margin: 4em auto 2em;
     position: relative;
     box-sizing: border-box;
 }
@@ -188,12 +188,12 @@ header{
     font-weight: bold;
     display: block;
     box-sizing: border-box;
-    top: 0;
+    top: 0em;
     height: 3.5em;
     padding: 1em 0.5em 0em;
     width: 800px;
     text-align: center;
-    z-index: 100;
+    z-index: 149;
 }
 
 canvas {
@@ -210,20 +210,20 @@ figcaption {
 
 #title{
     text-align: center;
-    width:80%;
+    width:70%;
     float: left;
     font-family: Roboto, sans-serif !important;
 }
 
 #back{
     float:left;
-    width:10%;
+    width:15%;
     text-align: left;
 }
 
 #next{
     float:right;
-    width:10%;
+    width:15%;
     text-align: right;
 }
 
@@ -274,11 +274,156 @@ p code{
     font-weight: bold;
 }
 
+#tableButton{
+    border: 2px solid black;
+    font-size: 1.5em;
+    font-weight: bold;
+    float: left;
+    width: calc((100% - 800px) / 2);
+    padding-top: 0em;
+    padding-left: 0.5em;
+    height: 2.8em;
+    text-align: left;
+    top:2.8em;
+    left:0;
+    background-color:rgb(244, 248, 236);
+    position: fixed;
+    font-family: 'Courier New', Courier, monospace;
+}
+#tableContents{
+    font-size: 0px;
+    position: fixed;
+    left: 0;
+    display: none;
+    float:left;
+    z-index: 100;
+    top:134.5px;
+    width: calc((100% - 800px) / 2);
+    overflow-y: overlay;
+    max-height: calc(100% - 150px);
+}
+#tableContents button{
+    border: 2px solid black;
+    font-size: 20px;
+    background-color: rgb(47, 119, 157);
+    width: 100%;
+    height: 2em;
+    margin-top: -2px;
+}
+#tableContents span button{
+    width: 90%;
+    float: right;
+}
+#contentSub{
+    font-size: 1em;
+}
+button:hover{
+    color: #FF9F1C;
+}
+.tableInside{
+    position: static;
+    width: 100%;
+}
+#icon{
+    height: 60px;
+    padding: 0.1em 10px 0.1em 5px;
+    float: left;
+}
+#iconHold{
+    background-color: white;
+    font-size: 2em;
+    width: calc((100% - 800px) / 2);
+    height: 2em;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    z-index: 200;
+}
+#tableContents span a:nth-of-type(even) button{
+    background-color:rgb(230, 241, 251);
+}
+#tableContents span a:nth-of-type(odd) button{
+    background-color:rgb(122, 167, 215);
+}
+#tableContents > a:nth-of-type(even) button{
+    background-color:rgb(244, 248, 236);
+}
+#tableContents > a:nth-of-type(odd) button{
+    background-color:rgb(177, 198, 171);
+}
+#iconHold div{
+    float: left;
+}
+#tableContents::-webkit-scrollbar{
+    width: 16px;
+}
+
+#tableContents::-webkit-scrollbar-thumb{
+    border-radius: 40px;
+    box-shadow: inset 0 0 10px 10px rgba(100, 100, 100, 0.75);
+    border: solid 5px transparent;
+}
+#tableContents::-webkit-scrollbar-track{
+    border-radius: 0px 0px 10px 0px;
+}
+@media only screen and (max-width: 1500px) {
+    #tableButton{
+        left:auto;
+        background-color:rgb(244, 248, 236, 0.9);
+        font-size: 1.2em;
+        position: fixed;
+        font-weight: bold;
+        display: block;
+        box-sizing: border-box;
+        top: 3.12em;
+        height: 2em;
+        padding: 0.25em 0em 0em;
+        width: 800px;
+        text-align: center;
+        z-index: 150;
+    }
+    #iconHold{
+        left:auto;
+        font-size: 1.5em;
+        width: 800px;
+        height: 2.5em;
+        display: flex;
+        position: fixed;
+        justify-content: center;
+        align-items: center;
+    }
+    #icon{
+        height: 50px;
+    }
+    #tableContents{
+        width: 800px;
+        left: auto;
+        top: 98.5px;
+        z-index: 150;
+        position: fixed;
+    }
+    #tableContents button{
+        background-color: rgb(47, 119, 157);
+    }
+    header{
+        top: 5.12em;
+    }
+    #contentContainer{
+        margin: 10.5em auto 2em;
+    }
+}
+
 @media only screen and (max-width: 850px) {
     #contentContainer{
         width: 100%;
-        padding: 0em 1em;
+        padding: 6.25em 1em;
         margin: 0px;
+    }
+    #tableContents{
+        left: 0;
+        width: 100%;
     }
     h1{
         font-size: 3em;
@@ -291,6 +436,16 @@ p code{
     }
     header{
         width: 100%;
-        position: relative;
+        position: static;
+    }
+    #tableButton{
+        width: 100%;
+        left: 0em;
+        position: fixed;
+    }
+    #iconHold{
+        width: 100%;
+        left: 0em;
+        position: fixed;
     }
 }
