--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+body, html{
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 #icon{
     height: 60px;
     padding: 0.1em 10px 0.1em 5px;
@@ -12,8 +18,10 @@
     align-items: center;
     justify-content: center;
     z-index: 200;
-    padding: 0.1em 0px;
     float: left;
+}
+* {
+    box-sizing: border-box;
 }
 #menuBar{
     width: calc((100% - 800px) / 2);
@@ -24,7 +32,19 @@
     z-index: 200;
     box-shadow: 2px 0 10px rgb(50, 50, 50);
 }
-#iconHold div{
+#iconHold button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.8em;
+    border:none;
+    background-color: white;
+    height: 100%;
+}
+#iconHold button:hover{
+    cursor: pointer;
+}
+#iconHold button div{
     float: left;
     padding-right: 10px;
 }
@@ -36,44 +56,63 @@
     box-sizing: border-box;
     transform: translateY(-50%);
 }
-#menuBar button{
-    border: 2px solid black;
+#menuBar #buttons button{
+    border: none;
     width: 100%;
     background-color: white;
-    border: none;
     font-size: 2em;
     height: 2em;
     display: block;
 }
-#menuBar button:focus{
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+.selectedBtn{
+    border-top: 2px solid black !important;
+    border-bottom: 2px solid black !important;
 }
-#menuBar button:focus-visible{
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+#holder{
+    overflow-y: auto;
+    height: 100%;
+    position: relative;
+    width: calc((50% + 400px));
+    left: calc((100% - 800px) / 2);
+}
+#holder div{
+    display: grid;
+    line-height: 0;
+    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
+}
+#holder div a img{
+    width: 100%;
+    float: left;
+    background-color: black;
+    transform: scale(1.0);
+    transition: 0.15s transform;
+}
+#holder div a img:hover{
+    transform: scale(1.1);
+}
+#holder div a{
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 1500px) {
+    #iconHold button{
+        width: 100%;
+    }
     #menuBar{
         height: 64px;
         width: 100%;
     }
-    #menuBar button{
+    #menuBar #buttons button{
         display: inline;
         width: calc(100% / 3);
         height: 100%;
         float:left;
     }
-    #menuBar button:focus{
-        border: none;
-        border-left: 2px solid black;
-        border-right: 2px solid black;
-    }
-    #menuBar button:focus-visible{
-        border: none;
-        border-left: 2px solid black;
-        border-right: 2px solid black;
+    .selectedBtn{
+        border: none!important;
+        border-left: 2px solid black!important;
+        border-right: 2px solid black!important;
     }
     #buttons{
         position: relative;
@@ -87,7 +126,7 @@
     }
     #iconHold{
         font-size: 1.5em;
-        width: auto;
+        width: 221px;
         height: 64px;
         display: flex;
         position: fixed;
@@ -98,9 +137,18 @@
     #icon{
         height: 50px;
     }
+    #holder{
+        left:0;
+        top: 64px;
+        width: 100%;
+        height: calc(100% - 64px);
+    }
 }
 
 @media only screen and (max-width: 850px) {
+    #iconHold button{
+        width: auto;
+    }
     #menuBar{
         box-shadow: none;
     }
@@ -115,5 +163,13 @@
         display: absolute;
         top: 64px;
         font-size: 0.5em;
+    }
+    #holder{
+        top: 128px;
+        width: 100%;
+        height: calc(100% - 128px);
+    }
+    #holder div{
+        grid-template-columns: repeat(2, 1fr);
     }
 }
