--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ body, html{
 #iconHold button{
     width: 100%;
     display: flex;
+    padding: 0px;
     justify-content: center;
     align-items: center;
     font-size: 0.8em;
@@ -50,6 +51,7 @@ body, html{
     text-decoration: none !important;
 }
 #iconHold button div{
+    color: black;
     float: left;
     padding-right: 10px;
 }
@@ -62,12 +64,16 @@ body, html{
     transform: translateY(-50%);
 }
 #menuBar #buttons button{
+    color:black;
     border: none;
     width: 100%;
     background-color: white;
     font-size: 2em;
     height: 2em;
     display: block;
+}
+#menuBar #buttons button:hover{
+    cursor: pointer;
 }
 .selectedBtn{
     border-top: 2px solid black !important;
@@ -80,7 +86,7 @@ body, html{
     width: calc((50% + 400px));
     left: calc((100% - 800px) / 2);
 }
-#holder div{
+#holder > div{
     display: grid;
     line-height: 0;
     width: 100%;
@@ -93,11 +99,33 @@ body, html{
     transform: scale(1.0);
     transition: 0.15s transform;
 }
-#holder div a img:hover{
+#holder div a div:hover ~ img{
     transform: scale(1.1);
 }
+#holder div a div:hover{
+    transform: scale(1.1);
+    border-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
+    color: rgba(0, 0, 0, 0);
+}
 #holder div a{
+    position: relative;
     overflow: hidden;
+}
+#holder div a div{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    display: flex;
+    align-items: center;
+    line-height: calc((50vw + 400px)/20);
+    text-align: center;
+    justify-content: center;
+    font-size: calc((50vw + 400px)/20);
+    transition: 0.2s transform, 0.3s color, 0.3s background-color;
 }
 
 @media only screen and (max-width: 1500px) {
@@ -152,9 +180,17 @@ body, html{
         width: 100%;
         height: calc(100% - 64px);
     }
+    #holder div a div{
+        line-height: 5vw;
+        font-size: 5vw;
+    }
 }
 
 @media only screen and (max-width: 850px) {
+    #holder div a div{
+        line-height: 7vw;
+        font-size: 7vw;
+    }
     #iconHold a{
         width: 8.7em;
         height: 100%;
@@ -179,7 +215,7 @@ body, html{
         width: 100%;
         height: calc(100% - 128px);
     }
-    #holder div{
+    #holder > div{
         grid-template-columns: repeat(2, 1fr);
     }
 }
