--- a/main.css
+++ b/main.css
@@ -1,476 +1,362 @@
 *, :after, :before {
-    box-sizing: border-box;
+        box-sizing: border-box;
 }
 
-body, html{
-    width: 100%;
-    padding: 0px;
-    margin: 0px;
-    overflow-x: hidden;
+html{
+        width: 100%;
+        height: 100%;
+        padding: 0px;
+        margin: 0px;
 }
 
 body{
-    position: relative
-}
-
-a{
-    color: inherit;
-    text-decoration: none;
-}
-
-p a{
-    font-weight: bold;
-    text-decoration: underline!important;
-}
-
-a:hover{
-    color: #FF9F1C;
-}
-
-#contentContainer{
-    width: 800px;
-    height: 100%;
-    margin: 4em auto 2em;
-    position: relative;
-    box-sizing: border-box;
-}
-
-h1, h2 {
-    text-align: center;
-    margin: 0.2em 0em;
-    line-height: 1em;
-    text-transform: uppercase;
-    font-family: Roboto, sans-serif !important;
-}
-
-h1{
-    font-size: 5em;
-}
-
-h2 {
-    font-size: 3em;
-}
-
-.sketch{
-    position: relative;
-    padding: 25%;
-    margin-bottom: 1.5em;
-    width: 100%;
-}
-
-p{
-    color: black;
-    font-size: 1em;
-    margin: 1em 0em;
-    line-height: 1.4em;
-    font-family: Roboto, sans-serif !important;
-}
-
-.style1{
-    color: #00A3A3;
-}
-
-.style2{
-    color: #43B929;
-}
-
-.style3{
-    color: #FF9F1C;
-}
-
-.style4{
-    color: #3A94C3;
-}
-
-.style5{
-    color: #2F779D;
-    font-weight: bold;
-}
-
-.style6{
-    color: #DD69DD;
-}
-
-.comment{
-    color: #7F7F7F;
-}
-
-.int{
-    color: #4e5bee;
-}
-
-.intUp{
-    color: #4e5bee;
-    vertical-align: super;
-    font-size: smaller;
-}
-
-pre{
-    border: 2px solid #B1CD79;
-    display: block;
-    background: none;
-    position: relative;
-    -webkit-overflow-scrolling: touch;
-    tab-size: 4;
-    font-size: 1em;
-    line-height: 1.2em;
-    color: black;
-    margin-top: 0px;
-    background-color: rgb(244, 248, 236);
-    border-radius: 1em;
-    overflow: hidden;
-}
-.codeHolder{
-    height:auto;
-    position: relative;
-    width: 100%;
-}
-pre code{
-    scrollbar-color: #B1CD79 rgb(0, 0, 0, 0);
-    overflow-x: scroll;
-    display: block;
-    padding: 0.3em 1em 0.5em;
-    white-space: pre;
-    display: none;
-}
-
-pre code:not(:first-of-type){
-    display: none;
-}
-
-pre code:first-of-type{
-    display: block;
-}
-.codeHolder .buttonHolder button{
-    color: black;
-    word-break: break-all;
-    margin: 0px;
-    max-width: auto;
-    margin-right: -2px;
-    top:2px;
-    z-index: 100;
-    font-size: 0.8em;
-    padding: 0.5em 0.3em;
-    border: solid #B1CD79;
-    border-width: 2px 2px 0px 2px;
-    border-radius: 0.5em 0.5em 0em 0em;
-}
-
-button:not(:first-of-type){
-    background-color: #B1CD79;
-}
-
-button:first-of-type{
-    background-color: rgb(244, 248, 236);
-}
-
-button:hover{
-    cursor: pointer;
-}
-
-.codeHolder .buttonHolder{
-    display: flex;
-    position: relative;
-    left: 0.6em;
-    top:2px;
-    width: calc(100% - 1.5em);
-}
-
-pre code div {
-    display: block;
-    height: 0.5em;
+        width: 800px;
+        padding: 0px;
+        margin: auto;
+        padding-bottom: 1em;
+        position: relative;
+        font-family: Roboto, sans-serif;
 }
 
 header{
-    background-color: rgba(255, 255, 255, 0.9);
-    font-size: 1.2em;
-    position: fixed;
-    font-weight: bold;
-    display: block;
-    box-sizing: border-box;
-    top: 0em;
-    height: 3.5em;
-    padding: 1em 0.5em 0em;
-    width: 800px;
-    text-align: center;
-    z-index: 149;
+        position: fixed;
+        left: 0;
+        width: calc(50% - 400px);
+        top: 0;
+        z-index: 1;
 }
 
-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
+header > *{
+        width: 100%;
+        font-size: 1.2em;
 }
 
-figcaption {
-    font-style: italic;
-    text-align: center;
-    font-size: 1em;
+#iconHold{
+        background-color: white;
+        height: 3em;
+        display: flex;
+        justify-content: center;
 }
 
-#title{
-    text-align: center;
-    width:70%;
-    float: left;
-    font-family: Roboto, sans-serif !important;
+#iconHold a{
+        height: 3.1em;
+        color: black !important;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
 }
 
-#back{
-    float:left;
-    width:15%;
-    text-align: left;
-}
-
-#next{
-    float:right;
-    width:15%;
-    text-align: right;
-}
-
-.explainContent{
-    scrollbar-color: #B1CD79 rgb(0, 0, 0, 0);
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding: 0.5em 1em;
-    top:0;
-    left:0;
-    border: 2px solid black;
-    border-radius: 1em;
-    position: relative;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-pre code::-webkit-scrollbar, .explainContent::-webkit-scrollbar{
-    width: 0.5em;
-    height: 0.5em;
-}
-
-pre code::-webkit-scrollbar-thumb, .explainContent::-webkit-scrollbar-thumb{
-    background-color: #B1CD79;
-    border-radius: 0.5em;
-}
-
-pre code::-webkit-scrollbar-track, .explainContent::-webkit-scrollbar-track{
-    background-color: rgb(0, 0, 0, 0);
-}
-
-p code{
-    border-radius: 1em;
-    border: 2px solid #B1CD79;
-    background-color: rgb(244, 248, 236);
-    width: auto;
-    height: auto;
-    color: black;
-    position: relative;
-    top:-0.1em;
-    padding: 0.1em 0.2em;
-    font-size: 1em;
-}
-
-.bigger{
-    font-size: 1.5em;
-    font-weight: bold;
+#iconHold a #icon{
+        height: 45px;
+        padding-right: 10px;
+        float: left;
 }
 
 #tableButton{
-    color:black;
-    border: 2px solid black;
-    font-size: 1.5em;
-    font-weight: bold;
-    float: left;
-    width: calc((100% - 800px) / 2);
-    padding-top: 0em;
-    padding-left: 0.5em;
-    height: 2.8em;
-    text-align: left;
-    top:2.8em;
-    left:0;
-    background-color:rgb(244, 248, 236);
-    position: fixed;
-    font-family: 'Courier New', Courier, monospace;
+        border: 2px solid black;
+
+        color:black;
+        font-weight: bold;
+        
+        height: 2em;
+        padding-left: 0.5em;
+
+        background-color:rgb(244, 248, 236);
+        font-family: 'Courier New', Courier, monospace;
 }
+
 #tableContents{
-    font-size: 0px;
-    position: fixed;
-    left: 0;
-    display: none;
-    float:left;
-    z-index: 100;
-    top:134.5px;
-    width: calc((100% - 800px) / 2);
-    overflow-y: overlay;
-    max-height: calc(100% - 150px);
+        display: none;
+        overflow-y: overlay;
+        max-height: calc(100vh - 150px);
+        min-height: 2em;
 }
-#tableContents button{
-    color:black;
-    border: 2px solid black;
-    font-size: 20px;
-    background-color: rgb(47, 119, 157);
-    width: 100%;
-    height: 2em;
-    margin-top: -2px;
+
+#tableContents a{
+        font-size: 1em;
+        color:black;
+        float: right;
+        border: 2px solid black;
+        width: 100%;
+        background-color: rgb(47, 119, 157);
+        height: 2em;
+        margin-top: -2px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 }
-#tableContents span button{
-    width: 90%;
-    float: right;
+
+#tableContents .children a{
+        width: 90%;
 }
+
+#tableContents .children a:nth-of-type(even){
+        background-color:rgb(230, 241, 251);
+}
+
+#tableContents .children a:nth-of-type(odd){
+        background-color:rgb(122, 167, 215);
+}
+
+#tableContents .parents a:nth-of-type(even){
+        background-color:rgb(244, 248, 236);
+}
+
+#tableContents .parents a:nth-of-type(odd){
+        background-color:rgb(177, 198, 171);
+}
+
+#navigation{
+        top: 4em;
+        height: 3em;
+        font-size: 1.2em;
+        padding: 1em 0.5em 0em;
+        font-weight: bold;
+        width:100%;
+}
+
+#title{
+        float: left;
+        width: 70%;
+        text-align: center;
+}
+
+#back{
+        float:left;
+        width: 15%;
+        text-align: left;
+        font-family: 'Lora', serif !important;
+}
+
+#next{
+        float:right;
+        width: 15%;
+        text-align: right;
+        font-family: 'Lora', serif !important;
+}
+
+pre{
+        border: 2px solid #B1CD79;
+        -webkit-overflow-scrolling: touch;
+        font-size: 1em;
+        line-height: 1.2em;
+        color: black;
+        margin-top: 0px;
+        border-radius: 1em;
+        overflow: hidden;
+}
+
+code{
+        background-color: rgb(244, 248, 236);      
+}
+
+pre code{
+        scrollbar-color: #B1CD79 rgb(0, 0, 0, 0);
+        overflow-x: scroll;
+        display: block;
+        padding: 0.3em 1em 0.5em;
+        white-space: pre;        
+}
+
+pre code:not(:first-of-type){
+        display: none;
+}
+
+pre code:first-of-type{
+        display: block;
+}
+
+.codeHolder .buttonHolder button{
+        color: black;
+        word-break: break-all;
+        margin: 0px;
+        margin-right: -2px;
+        font-size: 0.8em;
+        padding: 0.5em 0.3em;
+        border: 2px #B1CD79;
+        border-style: solid solid none solid;
+        border-radius: 0.5em 0.5em 0em 0em;
+}
+
+.codeHolder .buttonHolder{
+        position: relative;
+        display: flex;
+        margin-bottom: -2px;
+        left: 0.7em;
+        width: calc(100% - 1.4em);
+}
+        
+button:not(:first-of-type){
+        background-color: #B1CD79;
+}
+        
+button:first-of-type{
+        background-color: rgb(244, 248, 236);
+}
+
+.explainContent{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        padding: 0.5em 1em;
+        top:0;
+        left:0;
+        border: 2px solid black;
+        border-radius: 1em;
+        position: relative;
+        box-sizing: border-box;
+        overflow: hidden;
+}
+
+pre code::-webkit-scrollbar, .explainContent::-webkit-scrollbar{
+        height: 0.5em;
+}
+
+pre code::-webkit-scrollbar-thumb, .explainContent::-webkit-scrollbar-thumb{
+        background-color: #B1CD79;
+        border-radius: 0.5em;
+}
+
+pre code::-webkit-scrollbar-track, .explainContent::-webkit-scrollbar-track{
+        background-color: rgb(0, 0, 0, 0);
+}
+
+p code{
+        border-radius: 1em;
+        border: 2px solid #B1CD79;
+        color: black;
+        padding: 0.1em 0.2em;
+}
+
+.bigger{
+        font-size: 1.5em;
+        font-weight: bold;
+}
+
 #contentSub{
-    font-size: 1em;
+        font-size: 1em;
 }
+
 button:hover{
-    color: #FF9F1C!important;
+        color: #FF9F1C!important;
 }
+
 .tableInside{
-    position: static;
-    width: 100%;
+        position: static;
+        width: 100%;
 }
-#icon{
-    height: 60px;
-    padding: 0.1em 10px 0.1em 5px;
-    float: left;
-}
-#iconHold{
-    background-color: white;
-    font-size: 2em;
-    width: calc((100% - 800px) / 2);
-    height: 2.1em;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 200;
-}
-#tableContents span a:nth-of-type(even) button{
-    background-color:rgb(230, 241, 251);
-}
-#tableContents span a:nth-of-type(odd) button{
-    background-color:rgb(122, 167, 215);
-}
-#tableContents > a:nth-of-type(even) button{
-    background-color:rgb(244, 248, 236);
-}
-#tableContents > a:nth-of-type(odd) button{
-    background-color:rgb(177, 198, 171);
-}
+
 #iconHold div{
-    float: left;
+        float: left;
 }
-#iconHold a{
-    height: 100%;
-    width: 8em;
-}
-#iconHold button{
-    padding: 0px;
-    width: 100%;
-    justify-content: center;
-    background-color: white;
-    height: 100%;
-    border: none;
-    display: flex;
-    align-items: center;
-    font-size: 0.8em;
-    color: black !important;
-}
-#iconHold button:hover{
-    cursor:pointer;
-}
+
 #tableContents::-webkit-scrollbar{
-    width: 16px;
+        width: 16px;
 }
 
 #tableContents::-webkit-scrollbar-thumb{
-    border-radius: 40px;
-    box-shadow: inset 0 0 10px 10px rgba(100, 100, 100, 0.75);
-    border: solid 5px transparent;
+        border-radius: 40px;
+        box-shadow: inset 0 0 10px 10px rgba(100, 100, 100, 0.75);
+        border: solid 5px transparent;
 }
 #tableContents::-webkit-scrollbar-track{
-    border-radius: 0px 0px 10px 0px;
+        border-radius: 0px 0px 10px 0px;
 }
-@media only screen and (max-width: 1500px) {
-    #tableButton{
-        left:auto;
-        background-color:rgb(244, 248, 236, 0.9);
-        font-size: 1.2em;
-        position: fixed;
+
+a{
+        color: inherit;
+        text-decoration: none;
+}
+
+p a{
         font-weight: bold;
-        display: block;
-        box-sizing: border-box;
-        top: 3.12em;
-        height: 2em;
-        padding: 0.25em 0em 0em;
-        width: 800px;
+        text-decoration: underline!important;
+}
+
+a:hover{
+        color: #FF9F1C;
+}
+
+h1, h2 {
         text-align: center;
-        z-index: 150;
-    }
-    #iconHold{
-        left:auto;
-        font-size: 1.5em;
-        width: 800px;
-        height: 2.5em;
-        display: flex;
-        position: fixed;
-        justify-content: center;
-        align-items: center;
-    }
-    #iconHold a{
-        width: 8.7em;
-    }
-    #icon{
-        height: 50px;
-    }
-    #tableContents{
-        width: 800px;
-        left: auto;
-        top: 98.5px;
-        z-index: 150;
-        position: fixed;
-    }
-    #tableContents button{
-        background-color: rgb(47, 119, 157);
-    }
-    header{
-        top: 5.12em;
-    }
-    #contentContainer{
-        margin: 10.5em auto 2em;
-    }
+        margin: 0.2em 0em;
+        line-height: 1em;
+        text-transform: uppercase;
+        font-family: Roboto, sans-serif !important;
+}
+
+h1{
+        font-size: 5em;
+}
+
+h2 {
+        font-size: 3em;
+}
+
+.sketch{
+        position: relative;
+        padding: 25%;
+        margin-bottom: 1.5em;
+        width: 100%;
+}
+
+p{
+        color: black;
+        margin: 1em 0em;
+        line-height: 1.4em;
+}
+
+button:hover{
+        cursor: pointer;
+}
+
+pre code div {
+        display: block;
+        height: 0.5em;
+}
+
+canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+}
+
+figcaption {
+        font-style: italic;
+        text-align: center;
+        font-size: 1em;
+}
+
+@media only screen and (max-width: 1500px) {
+        header{
+                width: inherit;
+                left: auto;
+        }
+        body{
+                margin: 6em auto 0em;
+        }
 }
 
 @media only screen and (max-width: 850px) {
-    #contentContainer{
-        width: 100%;
-        padding: 6.25em 1em;
-        margin: 0px;
-    }
-    #tableContents{
-        left: 0;
-        width: 100%;
-    }
-    h1{
-        font-size: 3em;
-    }
-    h2{
-        font-size: 1.5em;
-    }
-    .bigger{
-        font-size: 1em;
-    }
-    header{
-        width: 100%;
-        position: static;
-    }
-    #tableButton{
-        width: 100%;
-        left: 0em;
-        position: fixed;
-    }
-    #iconHold{
-        width: 100%;
-        left: 0em;
-        position: fixed;
-    }
+        body{
+                width: 100%;
+                padding: 0em 0.5em 1em 0.5em;
+        }
+
+        h1{
+                font-size: 3em;
+        }
+
+        h2{
+                font-size: 1.5em;
+        }
+
+        .bigger{
+                font-size: 1em;
+        }
+
+        header{
+                left:0;
+        }
 }
